Add CR to Airports with CBV and corrected the inheritance of templates

--- a/administrator/templates/administrator/index_location.html
+++ b/administrator/templates/administrator/index_location.html
@@ -37,7 +37,7 @@
               <a class="nav-link " href="{% url 'cities-list' %}">CITIES</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link " href="#">AIRPORTS</a>
+              <a class="nav-link " href="{% url 'airports-list' %}">AIRPORTS</a>
             </li>
 
           </ul>
