--- a/templates/base.html
+++ b/templates/base.html
@@ -82,6 +82,7 @@
               <div class="dropdown-content">
                 <a href="{% url 'trips-list' %}">Trips</a>
                 <a href="{% url 'location' %}">Location</a>
+                <a href="{% url 'hotels-list' %}">Hotels</a>
               </div>
             </li>
           </ul>
