--- a/administrator/templates/administrator/trips/trip_delete.html
+++ b/administrator/templates/administrator/trips/trip_delete.html
@@ -1,15 +1,15 @@
-{% extends 'index_location.html' %}
-
-{% block content %}
-<h1>Delete </h1>
+{% extends 'base.html' %} {% block content %}
+<h1>Delete</h1>
 <form action="" method="post">
-    {% csrf_token %}
-    <div class="alert alert-warning" role="alert">
-      Are you sure you want to delete this trip
-    </div>
-    <div>
-      <button class="btn btn-danger" type="submit">Yes, remove it!</button>
-      <a class="btn btn-secondary" href="{% url 'trip-detail' pk=trip.pk %}">NO!!!!</a>
-    </div>
+  {% csrf_token %}
+  <div class="alert alert-warning" role="alert">
+    Are you sure you want to delete this trip
+  </div>
+  <div>
+    <button class="btn btn-danger" type="submit">Yes, remove it!</button>
+    <a class="btn btn-secondary" href="{% url 'trip-detail' pk=trip.pk %}"
+      >NO!!!!</a
+    >
+  </div>
 </form>
 {% endblock content %}
