--- a/templates/base.html
+++ b/templates/base.html
@@ -12,24 +12,20 @@
     main > .container {
       padding: 60px 0 0;
     }
- 
-/* Style The Dropdown Button */
+
 .dropbtn {
-  background-color: #607961;
+  background-color: #2e342e;
   color: white;
-  padding: 16px;
+  padding: 16x;
   font-size: 16px;
   border: none;
   cursor: pointer;
 }
-
-/* The container <div> - needed to position the dropdown content */
 .dropdown {
   position: relative;
   display: inline-block;
 }
 
-/* Dropdown Content (Hidden by Default) */
 .dropdown-content {
   display: none;
   position: absolute;
@@ -38,26 +34,20 @@
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
 }
-
-/* Links inside the dropdown */
 .dropdown-content a {
   color: black;
   padding: 12px 16px;
   text-decoration: none;
   display: block;
 }
-
-/* Change color of dropdown links on hover */
 .dropdown-content a:hover {background-color: #f1f1f1}
 
-/* Show the dropdown menu on hover */
 .dropdown:hover .dropdown-content {
   display: block;
 }
 
-/* Change the background color of the dropdown button when the dropdown content is shown */
 .dropdown:hover .dropbtn {
-  background-color: #3e8e41;
+  background-color: #8aa78b;
 }
 
     </style>
@@ -68,14 +58,14 @@
   <header>
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="{% url 'index' %}">MOON TRAVEL AGENCY</a>
+        <a class="navbar-brand" href="{% url 'home' %}">MOON TRAVEL AGENCY</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav me-auto mb-2 mb-md-0">
             <li class="nav-item">
-              <a class="nav-link " href="{% url 'index' %}">HomePage</a>
+              <a class="nav-link " href="{% url 'home' %}">HomePage</a>
             </li>
             <li class="dropdown">
               <button class="dropbtn">Administrator</button>
@@ -83,7 +73,13 @@
                 <a href="{% url 'trips-list' %}">Trips</a>
                 <a href="{% url 'location' %}">Location</a>
                 <a href="{% url 'hotels-list' %}">Hotels</a>
+                <a href="{% url 'list-of-trips-to-purchase' %}">Purchases</a>
               </div>
+            </li>
+            <li>
+              <form method="GET" action="{% url 'home' %}">
+                <input type="text" name="q" placeholder="Search Trips..." />
+              </form>
             </li>
           </ul>
         </div>
@@ -95,7 +91,9 @@
   </main>
   <footer class="footer mt-auto py-3 bg-light">
     <div class="container">
-      <p class="text-center m-0 p-0 text-muted">Copyright &copy; ALBANIA </p>
+      <marquee direction="left">MOON TRAVEL AGENCY The best in town, from 1980 in your service for happy
+        vactions and journey around the world.
+      </marquee>
     </div>
   </footer>
     {% block scripts %}
