added users app, create the form of login/register, added static files and uses them on css and html files

--- a/templates/base.html
+++ b/templates/base.html
@@ -82,6 +82,23 @@
               </form>
             </li>
           </ul>
+          <ul class="navbar-nav ms-auto mb-2 mb-md-0">
+            {% if user.is_authenticated %}
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">My trips</a>
+            </li>
+            {% else %}
+            <li class="nav-item">
+              <a class="nav-link" href="{% url 'login' %}">Login</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Register</a>
+            </li>
+            {% endif %}
+          </ul>
         </div>
       </div>
     </nav>
