style the search bar, trying to fix the search icon

--- a/homepage/templates/homepage/home.html
+++ b/homepage/templates/homepage/home.html
@@ -7,10 +7,9 @@
         grid-template-columns: 1fr 3fr ;
     }
 </style>
-<h1>Home Template</h1>
 <div class="home-container">
     <div><hr>
-        <h3>Browse Topics</h3>
+        <h3>Browse Trips</h3>
     </hr>
     {% if trips %}
     <div>
