--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
     }
 
 .dropbtn {
-  background-color: #2e342e;
+  background-color: #425cd0;
   color: white;
   padding: 16x;
   font-size: 16px;
@@ -52,11 +52,14 @@
 
     </style>
     {% endblock styles %}
+
+    {% load static %}
+    <link rel='stylesheet' href="{% static 'js/search.js' %}">
   </head>
   <body class="d-flex flex-column h-100">
 
   <header>
-    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary">
       <div class="container-fluid">
         <a class="navbar-brand" href="{% url 'home' %}">MOON TRAVEL AGENCY</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -68,18 +71,13 @@
               <a class="nav-link " href="{% url 'home' %}">HomePage</a>
             </li>
             <li class="dropdown">
-              <button class="dropbtn">Administrator</button>
+              <button class="btn btn-primary">Administrator</button>
               <div class="dropdown-content">
                 <a href="{% url 'trips-list' %}">Trips</a>
                 <a href="{% url 'location' %}">Location</a>
                 <a href="{% url 'hotels-list' %}">Hotels</a>
                 <a href="{% url 'list-of-trips-to-purchase' %}">Purchases</a>
               </div>
-            </li>
-            <li>
-              <form method="GET" action="{% url 'home' %}">
-                <input type="text" name="q" placeholder="Search Trips..." />
-              </form>
             </li>
           </ul>
           <ul class="navbar-nav ms-auto mb-2 mb-md-0">
@@ -91,11 +89,8 @@
               <a class="nav-link" href="#">My trips</a>
             </li>
             {% else %}
-            <li class="nav-item">
+            <li class="nav-item"> 
               <a class="nav-link" href="{% url 'login' %}">Login</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Register</a>
             </li>
             {% endif %}
           </ul>
@@ -103,6 +98,18 @@
       </div>
     </nav>
   </header>
+  <br><br><br>
+  <div class="input-group">
+    <div class="form-outline">
+      <form method="GET" action="{% url 'home' %}">
+        <input id="search-input" type="text" name="q" placeholder="Search Trips..."/>
+      </form>
+    </div>
+    <button id="search-button" type="button" class="btn btn-primary">
+      <i class="fas fa-search"></i>
+    </button>
+  </div>
+  
       {% block content %}{% endblock content %}
     </div>
   </main>
@@ -116,6 +123,7 @@
     {% block scripts %}
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js" integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK" crossorigin="anonymous"></script>
+    <script src="{% static 'js/search.js' %}"></script>
     {% endblock scripts %}
   </body>
 </html>
