--- a/users/templates/registration/login.html
+++ b/users/templates/registration/login.html
@@ -11,14 +11,14 @@
 
 
 <div class="container">
-	<figure><img src="{% static 'images/figured-logo-white-med.png' %}"></figure>
+	<figure ><img src="{% static 'images/figured-logo-white-med.png' %}"></figure>
 	<div class="screen">
 		<div class="screen__content">
 			<form class="login" method="POST" action="">
 				{% csrf_token %}
 				<div class="login__field">
 					<i class="login__icon fas fa-user"></i>
-					<input type="text" name="username" class="login__input" placeholder="User name / Email">
+					<input type="text" name="username" class="login__input" placeholder="User name / Email" autocomplete="off">
 				</div>
 				<div class="login__field">
 					<i class="login__icon fas fa-lock"></i>
@@ -28,7 +28,7 @@
 					<span class="button__text">Log In Now</span>
 					<i class="button__icon fas fa-chevron-circle-right"></i>
 				</button>
-				<div class="register"><b>Don't you have an account? Register now!</b></div>				
+				<div class="register"><b>Don't you have an account? <a href="{% url 'register' %}">Register now!</a></b></div>				
 			</form>
 			<div class="alert alert-info alert-dismissible fade in">
 			{% if messages %}
