on my long way to add purchases of trips

--- a/administrator/templates/administrator/hotels/hotel_add.html
+++ b/administrator/templates/administrator/hotels/hotel_add.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %} {{block.super}} {% load crispy_forms_tags %} 
+{% extends 'administrator/index_location.html' %} {{block.super}} {% load crispy_forms_tags %} 
 {% block content %} {% if hotel %}
 <h1>Edit <small>{{ hotel.name }}</small></h1>
 {% else %}
