--- a/administrator/templates/administrator/location/continent_add.html
+++ b/administrator/templates/administrator/location/continent_add.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'administrator/index_location.html' %}
 
 {% load crispy_forms_tags %}
 {% load crispy_forms_filters %}
