--- a/administrator/templates/administrator/trips/trip_add.html
+++ b/administrator/templates/administrator/trips/trip_add.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %} {% load crispy_forms_tags %} {% load crispy_forms_filters %} {% block content %}
+{% extends 'administrator/index_location.html' %} {% load crispy_forms_tags %} {% load crispy_forms_filters %} {% block content %}
 {% if trip %}
 <h1>Edit</h1>
 {% else %}
