--- a/administrator/templates/administrator/hotels/hotel_delete.html
+++ b/administrator/templates/administrator/hotels/hotel_delete.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'administrator/index_location.html' %}
 {{ block.super }}
 {% block content %}
 <h1>Delete <small>{{ hotel.name }}</small></h1>
