--- a/administrator/templates/administrator/index_location.html
+++ b/administrator/templates/administrator/index_location.html
@@ -19,7 +19,7 @@
   <body class="d-flex flex-column h-100">
 
   <header>
-    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary">
       <div class="container-fluid">
         <a class="navbar-brand" href="{% url 'home' %}">MOON TRAVEL AGENCY</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
