--- a/administrator/templates/administrator/purchases/purchase_form.html
+++ b/administrator/templates/administrator/purchases/purchase_form.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %} {% load crispy_forms_tags %} {% load crispy_forms_filters %} {% block content %}
+{% extends 'administrator/index_location.html' %} {% load crispy_forms_tags %} {% load crispy_forms_filters %} {% block content %}
 <br><br><br>
 <form action="" method="post" novalidate>
   {% csrf_token %}
