--- a/administrator/templates/administrator/trips/trip_delete.html
+++ b/administrator/templates/administrator/trips/trip_delete.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %} {% block content %}
+{% extends 'administrator/index_location.html' %} {% block content %}
 <h1>Delete</h1>
 <form action="" method="post">
   {% csrf_token %}
