--- a/administrator/templates/administrator/index_location.html
+++ b/administrator/templates/administrator/index_location.html
@@ -21,7 +21,7 @@
   <header>
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary">
       <div class="container-fluid">
-        <a class="navbar-brand" href="{% url 'home' %}">MOON TRAVEL AGENCY</a>
+        <a class="navbar-brand" href="{% url 'home' %}">KALEMI TRAVEL AGENCY</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
