--- a/templates/base.html
+++ b/templates/base.html
@@ -78,8 +78,17 @@
                 <a href="{% url 'trips-list' %}">Trips</a>
                 <a href="{% url 'location' %}">Location</a>
                 <a href="{% url 'hotels-list' %}">Hotels</a>
-                <a href="{% url 'list-of-trips-to-purchase' %}">Purchases</a>
               </div>
+            </li>
+            </ul>
+            <ul class="navbar-nav ms-auto mb-2 mb-md-0">
+            <li class="nav-item">
+              <form class="d-flex" role="search" method="GET" action="{% url 'home' %}">
+                <input class="btn btn-light" id="search-input" type="search" name="q" placeholder="Search Trips..."  />
+                <button id="search-button" type="button" class="btn btn-secondary btn-sm btn-block">
+                  {% bs_icon 'search' size='1.0em' %}
+                </button>
+              </form>
             </li>
           </ul>
           <ul class="navbar-nav ms-auto mb-2 mb-md-0">
@@ -99,21 +108,12 @@
         </div>
       </div>
     </nav>
+    <br><br>
     <nav class="navbar navbar-expand-lg navbar-dark bg-light">
-      <a class="navbar-brand"><img src="{% static 'images/kalemi1.png' %}"></a></nav>
-  <nav id="search-contact">
-  <div class="d-flex justify-content-between align-items-end">
-      <form method="GET" action="{% url 'home' %}">
-        <input id="search-input" type="search" name="q" placeholder="Search Trips..." aria-label="Search" maxlength="14" />
-        <button id="search-button" type="button" class="btn btn-primary btn-sm btn-block">
-          {% bs_icon 'search' size='1.0em' %}
-        </button>
-        <button id="contact-button" type="button" class="btn btn-info btn-sm btn-block">Contact Us
-          {% bs_icon 'phone' size='1.0em' %}
-        </button>
-      </form>
-  </div>
-
+      <a><img src="{% static 'images/kalemi1.png' %}"></a>
+      <button id="contact-button" type="button" class="btn btn-outline-primary btn-lg btn-block justify-content-center ">Contact Us
+        {% bs_icon 'phone' size='2.0em' %}
+      </button></nav>
 </div>
 </nav>
 </div>
