--- a/administrator/templates/administrator/index_location.html
+++ b/administrator/templates/administrator/index_location.html
@@ -13,6 +13,14 @@
       padding: 60px 0 0;
     }
 
+    .nav-link.hover {
+      color:white;
+    }
+
+    .nav-link:active{
+      color: green;
+    }
+
     </style>
     {% endblock styles %}
   </head>
@@ -27,7 +35,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav me-auto mb-2 mb-md-0">
-            <li class="nav-item">
+            <li class="nav-item" >
               <a class="nav-link " href="{% url 'continents-list' %}">CONTINENTS</a>
             </li>
             <li class="nav-item">
@@ -38,6 +46,12 @@
             </li>
             <li class="nav-item">
               <a class="nav-link " href="{% url 'airports-list' %}">AIRPORTS</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link " href="{% url 'hotels-list' %}">HOTELS</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link " href="{% url 'trips-list' %}">TRIPS</a>
             </li>
 
           </ul>
