--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,8 @@
     <meta name="author" content="ALBANIA">
     <title>{% block title %}TRAVEL AGENCY {% endblock title %}</title>
     {% block styles %}
+    <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.2.0/css/all.css'>
+    <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.2.0/css/fontawesome.css'>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <style>
     main > .container {
@@ -72,14 +74,10 @@
             <li class="nav-item">
               <a class="nav-link " href=#>Promotions</a>
             </li>
-            <li class="dropdown">
-              <button class="btn btn-primary">Administrator</button>
-              <div class="dropdown-content">
-                <a href="{% url 'trips-list' %}">Trips</a>
-                <a href="{% url 'location' %}">Location</a>
-                <a href="{% url 'hotels-list' %}">Hotels</a>
-              </div>
+            <li class="nav-item">
+              <a class="nav-link " href="{% url 'administrator-page' %}">Administrator</a>
             </li>
+
             </ul>
             <ul class="navbar-nav ms-auto mb-2 mb-md-0">
             <li class="nav-item">
@@ -109,26 +107,148 @@
       </div>
     </nav>
     <br><br>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-light">
-      <a><img src="{% static 'images/kalemi1.png' %}"></a>
-      <button id="contact-button" type="button" class="btn btn-outline-primary btn-lg btn-block justify-content-center ">Contact Us
-        {% bs_icon 'phone' size='2.0em' %}
-      </button></nav>
+    <div >
+    <img src="{% static 'images/kalemi1.png' %}" width="100%" height="120px">
+    </div>
 </div>
-</nav>
 </div>
 </header>
-  
       {% block content %}{% endblock content %}
     </div>
   </main>
-  <footer class="footer mt-auto py-3 bg-light">
-    <div class="container">
-      <marquee direction="left">KALEMI TRAVEL AGENCY The best in town, from 1980 in your service for happy
-        vactions and journey around the world.
-      </marquee>
+<!-- Remove the container if you want to extend the Footer to full width. -->
+<div class="mx-0 my-3" >
+  <!-- Footer -->
+  <footer 
+          class="text-center text-lg-start text-white"
+          style="background-color: #929fba; "
+          
+          >
+    <!-- Grid container -->
+    <div class="container p-4 pb-0">
+      <!-- Section: Links -->
+      <section class="">
+        <!--Grid row-->
+        <div class="row">
+          <!-- Grid column -->
+          <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
+            <h6 class="text-uppercase mb-4 font-weight-bold">
+              KALEMI TRAVEL AGENCY
+            </h6>
+            <p>
+              To offer our friends as many special experiences as possible through trips, activities, adventures, trainings.
+            </p>
+          </div>
+          <!-- Grid column -->
+
+          <hr class="w-100 clearfix d-md-none" />
+
+          <!-- Grid column -->
+          <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
+            <h6 class="text-uppercase mb-4 font-weight-bold">Privacy Policy</h6>
+            <p>
+              <a class="text-white">About Us</a>
+            </p>
+            <p>
+              <a class="text-white">MDWordPress</a>
+            </p>
+            <p>
+              <a class="text-white">BrandFlow</a>
+            </p>
+          </div>
+          <!-- Grid column -->
+
+          <hr class="w-100 clearfix d-md-none" />
+
+          <!-- Grid column -->
+          <hr class="w-100 clearfix d-md-none" />
+
+          <!-- Grid column -->
+          <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
+            <h6 class="text-uppercase mb-4 font-weight-bold ">Contact</h6>
+            <p><i class="fas fa-home mr-3"></i> Tirane, Wilson Square, AL</p>
+            <p><i class="fas fa-envelope mr-3"></i> kalemi.info@gmail.com</p>
+            <p><i class="fas fa-phone mr-3"></i> + 01 234 567 88</p>
+            <p><i class="fas fa-print mr-3"></i> + 01 234 567 89</p>
+          </div>
+          <!-- Grid column -->
+
+          <!-- Grid column -->
+          <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
+            <h6 class="text-uppercase mb-4 font-weight-bold">Follow us</h6>
+
+            <!-- Facebook -->
+            <a
+               class="btn btn-primary btn-floating m-1"
+               style="background-color: #3b5998"
+               href="#!"
+               role="button"
+               ><i class="fab fa-facebook-f"></i
+              ></a>
+
+            <!-- Twitter -->
+            <a
+               class="btn btn-primary btn-floating m-1"
+               style="background-color: #55acee"
+               href="#!"
+               role="button"
+               ><i class="fab fa-twitter"></i
+              ></a>
+
+            <!-- Google -->
+            <a
+               class="btn btn-primary btn-floating m-1"
+               style="background-color: #dd4b39"
+               href="#!"
+               role="button"
+               ><i class="fab fa-google"></i
+              ></a>
+
+            <!-- Instagram -->
+            <a
+               class="btn btn-primary btn-floating m-1"
+               style="background-color: #ac2bac"
+               href="#!"
+               role="button"
+               ><i class="fab fa-instagram"></i
+              ></a>
+
+            <!-- Linkedin -->
+            <a
+               class="btn btn-primary btn-floating m-1"
+               style="background-color: #0082ca"
+               href="#!"
+               role="button"
+               ><i class="fab fa-linkedin-in"></i
+              ></a>
+            <!-- Github -->
+            <a
+               class="btn btn-primary btn-floating m-1"
+               style="background-color: #333333"
+               href="#!"
+               role="button"
+               ><i class="fab fa-github"></i
+              ></a>
+          </div>
+        </div>
+        <!--Grid row-->
+      </section>
+      <!-- Section: Links -->
     </div>
+    <!-- Grid container -->
+
+    <!-- Copyright -->
+    <div
+         class="text-center p-3"
+         style="background-color: rgba(0, 0, 0, 0.2)"
+         >
+         Te gjitha te drejtat rezervuar © KalemiTravel 2020
+        
+    </div>
+    <!-- Copyright -->
   </footer>
+  <!-- Footer -->
+</div>
     {% block scripts %}
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.min.js" integrity="sha384-ODmDIVzN+pFdexxHEHFBQH3/9/vQ9uori45z4JjnFsRydbmQbmL5t1tQ0culUzyK" crossorigin="anonymous"></script>
