--- a/homepage/templates/homepage/home.html
+++ b/homepage/templates/homepage/home.html
@@ -16,11 +16,20 @@
         <a href="{% url 'home' %}?q={{trip.pk}}">All</a>
      </div>
      <div class="alert alert-info">
-        <a href="{% url 'home' %}?q={{trip.city_to_where.country.continent.name}}">Continents</a>
+      <a href="{% url 'home' %}?q={{trip.date_departure}}">Date Departure <input type="date" value="2018-07-22"></a>
      </div>
      <div class="alert alert-info">
-        <a href="{% url 'home' %}?q={{trip.city_to_where.country.name}}">Countries</a>
-     </div>
+     <div class="dropdown">
+      <button onclick="myFunction()" class="dropbtn">Types</button>
+      <div id="myDropdown" class="dropdown-content">
+        <input type="text" placeholder="Search.." id="myInput" onkeyup="filterFunction()">
+        <a href="{% url 'home' %}?q={{trip.type}}">All inclusive</a>
+        <a href="{% url 'home' %}?q={{trip.type}}">Half Broad</a>
+        <a href="{% url 'home' %}?q={{trip.type}}">Full Broad</a>
+        <a href="{% url 'home' %}?q={{trip.type}}">Bed & Breakfast</a>
+      </div>
+    </div>
+    </div>
      <div class="alert alert-info">
         <a href="{% url 'home' %}?q={{city.name}}">Cities</a>
      </div>
@@ -28,21 +37,55 @@
     </div>
 
 <aside>
-    <div class="row row-cols-1 row-cols-md-3 g-4">
+    <div style="display: flex; flex-direction:row; flex-wrap: wrap">
         {% for trip in trips %}
-        <div v-for="trip in trips" class="col" >
-            <a href="{% url 'trip-detail' pk=trip.pk %}" style="text-decoration: none;">{{trip.city_from_where.name}}-{{trip.city_to_where.name}}</a>
-                <div class="card" >
-                    <p>{{ trip.city_from_where }} - {{ trip.city_to_where }} - {{ trip.airport_to_where }}{{ trip.airport_from_where}}</p>
-                    {% if trip.hotel_to_where.photo %}
-                    <img class="card-img-top" src="{{ trip.hotel_to_where.photo.url }}" alt="Profile picture here ...">
-                    {% else %}
-                    <div class="alert alert-warning" role="alert">No photo for this hotel</div>
-                    {% endif %}
+            <div class="card mb-2" style="max-width: 410px; max-height: 180px;">
+            <div class="row g-0">
+              <div class="col-md-4">
+                {% if trip.hotel_to_where.photo %}
+                <img class="card-img-top" height="100%" src="{{ trip.hotel_to_where.photo.url }}" alt="Profile picture here ...">
+                {% else %}
+                <div class="alert alert-warning" role="alert">No photo for this hotel</div>
+                {% endif %}
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h6 class="card-title">{{ trip.city_from_where.name }} to {{ trip.city_to_where.name}}</h6>
+                  <p class="card-text"><h5>
+                    Jorney lasts {{ trip.number_of_days }} from {{ trip.date_of_departure}} to
+                    {{ trip.date_of_return }}
+                  </h5></p>
                 </div>
-        </div>
+              </div>
+              <div class="btn btn-info"><a href="{% url 'trip-detail' pk=trip.pk %}" style="text-decoration: none;">Details</a></div>
+            </div>
+            </div>
         {% endfor %}
-        </div>
+    </div>
 </aside>
-</div>
 {% endblock content %}
+{% block scripts %}
+<script>
+  /* When the user clicks on the button,
+  toggle between hiding and showing the dropdown content */
+  function myFunction() {
+    document.getElementById("myDropdown").classList.toggle("show");
+  }
+  
+  function filterFunction() {
+    var input, filter, ul, li, a, i;
+    input = document.getElementById("myInput");
+    filter = input.value.toUpperCase();
+    div = document.getElementById("myDropdown");
+    a = div.getElementsByTagName("a");
+    for (i = 0; i < a.length; i++) {
+      txtValue = a[i].textContent || a[i].innerText;
+      if (txtValue.toUpperCase().indexOf(filter) > -1) {
+        a[i].style.display = "";
+      } else {
+        a[i].style.display = "none";
+      }
+    }
+  }
+  </script>
+  {% endblock scripts %}
