fixed the filter type dropbutton

--- a/administrator/templates/administrator/trips/trip_detail.html
+++ b/administrator/templates/administrator/trips/trip_detail.html
@@ -18,8 +18,7 @@
           <h5 class="card-title">{{ trip.city_from_where.name }} to {{ trip.city_to_where.name}}</h5>
           <p class="card-text"><h3>{{trip.airport_from_where}} to {{trip.airport_to_where}}</h3></p>
           <p class="card-text"><h3>
-            Jorney lasts {{ trip.number_of_days }} from {{ trip.date_of_departure}} to
-            {{ trip.date_of_return }}
+            {{ trip.type }} Journey lasts {{ trip.number_of_days }} from {{ trip.date_of_departure}} to {{ trip.date_of_return }}
           </h3></p>
         </div>
       </div>
