--- a/homepage/templates/homepage/home.html
+++ b/homepage/templates/homepage/home.html
@@ -13,20 +13,24 @@
     {% if trips %} 
     <div class="alert alert-primary"><i class="fas fa-globe fa-fw me-3"></i>Browse Trips </div>
     <div class="alert alert-info">
-        <a href="{% url 'home' %}?q={{trip.pk}}">All</a>
+        <a href="{% url 'home' %}">All</a>
      </div>
      <div class="alert alert-info">
-      <a href="{% url 'home' %}?q={{trip.date_departure}}">Date Departure <input type="date" value="2018-07-22"></a>
+      <a href="{% url 'interval-time' %}" style="text-decoration: none;">Choose time</a>
+      <form action="" method="post" novalidate>
+        {% csrf_token %}
+        {{ form }}
+      <div>From<input type="date" value="first_date"></div>
+      <div>To<input type="date" value="second_date"></div></form>
      </div>
      <div class="alert alert-info">
      <div class="dropdown">
-      <button onclick="myFunction()" class="dropbtn">Types</button>
+      <button class="btn btn-outline-light" style="color:blue;">Types    <i class="fa fa-arrow-down"></i></button>
       <div id="myDropdown" class="dropdown-content">
-        <input type="text" placeholder="Search.." id="myInput" onkeyup="filterFunction()">
-        <a href="{% url 'home' %}?q={{trip.type}}">All inclusive</a>
-        <a href="{% url 'home' %}?q={{trip.type}}">Half Broad</a>
-        <a href="{% url 'home' %}?q={{trip.type}}">Full Broad</a>
-        <a href="{% url 'home' %}?q={{trip.type}}">Bed & Breakfast</a>
+        <a href="{% url 'all-inclusive' %}">All inclusive</a>
+        <a href="{% url 'half-broad' %}">Half Broad</a>
+        <a href="{% url 'full-broad' %}">Full Broad</a>
+        <a href="{% url 'bed-breakfast' %}">Bed & Breakfast</a>
       </div>
     </div>
     </div>
@@ -39,7 +43,7 @@
 <aside>
     <div style="display: flex; flex-direction:row; flex-wrap: wrap">
         {% for trip in trips %}
-            <div class="card mb-2" style="max-width: 410px; max-height: 180px;">
+            <div class="card mb-2 mt-5" style="max-width: 410px; max-height: 180px;">
             <div class="row g-0">
               <div class="col-md-4">
                 {% if trip.hotel_to_where.photo %}
@@ -63,29 +67,5 @@
         {% endfor %}
     </div>
 </aside>
+<br><br><br>
 {% endblock content %}
-{% block scripts %}
-<script>
-  /* When the user clicks on the button,
-  toggle between hiding and showing the dropdown content */
-  function myFunction() {
-    document.getElementById("myDropdown").classList.toggle("show");
-  }
-  
-  function filterFunction() {
-    var input, filter, ul, li, a, i;
-    input = document.getElementById("myInput");
-    filter = input.value.toUpperCase();
-    div = document.getElementById("myDropdown");
-    a = div.getElementsByTagName("a");
-    for (i = 0; i < a.length; i++) {
-      txtValue = a[i].textContent || a[i].innerText;
-      if (txtValue.toUpperCase().indexOf(filter) > -1) {
-        a[i].style.display = "";
-      } else {
-        a[i].style.display = "none";
-      }
-    }
-  }
-  </script>
-  {% endblock scripts %}
